# ollama-chat

./: Pipfile  README.md  main.py  pyproject.toml
.github/: LICENSE.md
